# dbworkbench

./: .gitignore  README.md  context.md  demo.py  django.md  generate_report.py  inverse_engine.py  pyproject.toml  pytest.ini  rollback_engine.py  start-all.ps1  test_inverse_engine.py  version_store.py  workbench.py
cloud_update/: write_performance_test.py
cloud_update/comp_stats/: compare.py
cloud_update/rds/: main.py  rds_performance_test.py
cloud_update/s3/: main.py  s3_performance_test.py
django_backend/authentication/: serializers.py  urls.py  views.py
django_backend/authentication/migrations/: 0001_initial.py
django_backend/connections/: admin.py  models.py
django_backend/connections/migrations/: 0001_initial.py
django_backend/core/: admin.py  models.py  services.py
django_backend/core/migrations/: 0001_initial.py  0002_commitevent_seq.py  0003_rename_core_commit_connprofile_seq_idx_core_commit_connect_510719_idx.py  0004_commitevent_commit_hash.py
django_backend/django_backend/: settings.py  urls.py
fastapi_backend/app/: auth.py  config.py  django_setup.py  main.py
fastapi_backend/app/db/: connection.py  metadata_queries.py
fastapi_backend/app/kafka/: __init__.py  config.py  consumer_worker.py  create_topics.py  debug_consumer.py  producer.py  sample_config.ini  schemas.py  test_producer.py  topics.py
fastapi_backend/app/models/: schemas.py
fastapi_backend/app/routes/: anticommand_routes.py  auth_routes.py  commit_routes.py  (+5 more)
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
inverse/: inverse_engine.py  test_inverse_engine.py
query/: main.py
tests/: conftest.py  test_anticommands.py  test_auth_fastapi.py  test_authentication.py  test_commits.py  test_connections.py  test_core_models.py  test_core_services.py  test_inverse_engine_comprehensive.py  test_inverse_engine_real_db.py  test_query.py  test_rollback.py  test_snapshots.py
(+37 files in other folders)
