[project]
name = "dbworkbench"
version = "0.1.0"
description = "Workbench including rollback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.44",
    "cryptography>=45.0.0",
    "django>=5.1.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.11",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "django",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "python-dotenv>=1.2.2",
    "cryptography>=46.0.5",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
]
