[project]
name = "dbworkbench"
version = "0.3.0"
description = "Workbench including rollback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.44",
    "confluent-kafka>=2.6.0",
    "cryptography>=46.0.5",
    "django>=5.1.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "fastapi>=0.115.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.10.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.34.0",
    "pyjwt>=2.12.1",
    "django-stubs>=6.0.1",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pyright]
extraPaths = ["django_backend"]
typeCheckingMode = "basic"
reportAttributeAccessIssue = false

[tool.django-stubs]
django_settings_module = "django_backend.settings"
